<resources>
    <string name="app_name">WeatherApp_java</string>
    <string name="mi_marca">JMARSER</string>
    <string name="slogan_app">El clima importa,\nadelantate a él</string>
    <string name="city_empty">No hay información que mostrar</string>
    <string name="text_image">Imagen del tiempo</string>
    <string name="permision_location_message">Se necesitan acceder a los permisos de ubicación</string>
    <string name="ajustes">Ajustes</string>
    <string name="cancel">Cancelar</string>
    <string name="error_getlocation">Error al obtener la posición del dispositivo</string>
    <string name="menu_cities">Ciudades</string>
    <string name="menu_settings">Ajustes</string>
    <string name="menu_info">Info</string>

    <!-- TODO: textos de prueba -->
    <string name="city_prueba">Ciudad</string>
    <string name="date_prueba">Miércoles, 22:50</string>
    <string name="temp_prueba">32ºC</string>
    <string name="description_prueba">Descripción de prueba</string>
    <string name="hora_prueba">22:50</string>
    <string name="velocidad_prueba">25Km/h</string>
    <string name="direccion_prueba">Nordeste</string>
    <string name="pressure_prueba">1000mbar</string>
    <string name="humedad_prueba">80%</string>
    <string name="uvi_prueba">10</string>
    <string name="visibility_prueba">10km</string>
    <string name="dia">Día prueba, 22:30</string>
    <string name="coord_prueba">12,235689</string>
    <string name="version_prueba">1.0</string>

    <!-- TODO: textos fragment weather -->
    <string name="pronostico_horas">Previsión prox. horas</string>
    <string name="pronostico_dias">Previsión prox. días</string>
    <string name="amanecer">Amanecer</string>
    <string name="anochecer">Anochecer</string>
    <string name="feels_temp">Sensación term.</string>
    <string name="pressure">Presión</string>
    <string name="humidity">Humedad</string>
    <string name="uvi">Radiación UV.</string>
    <string name="visibility">Visibilidad</string>
    <string name="temp_min">Temp. min</string>
    <string name="temp_max">Temp. max</string>
    <string name="forecast">PRONÓSTICO</string>
    <string name="summary">Expect a day of partly cloudy with rain</string>

    <!-- TODO: Días de la semana -->
    <string name="monday">Lunes</string>
    <string name="tuesday">Martes</string>
    <string name="wednesday">Miércoles</string>
    <string name="thursday">Jueves</string>
    <string name="friday">Viernes</string>
    <string name="saturday">Sábado</string>
    <string name="sunday">Domingo</string>
    <string name="undefined">sin datos</string>

    <!-- TODO: Meses del año -->
    <string name="january">Enero</string>
    <string name="february">Febrero</string>
    <string name="march">Marzo</string>
    <string name="april">Abril</string>
    <string name="may">Mayo</string>
    <string name="june">Junio</string>
    <string name="july">Julio</string>
    <string name="august">Agosto</string>
    <string name="september">Septiembre</string>
    <string name="october">Octubre</string>
    <string name="november">Noviembre</string>
    <string name="december">Diciembre</string>
    <string name="version_app">Versión App:</string>
    <string name="desarrollador">Juan Márquez Serrano</string>
    <string name="nick_desarrollador">JMARSER</string>
    <string name="text_desarrollador">Desarrollador:</string>


</resources>