<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info.InfoActivity"
    android:background="#000000">

    <ImageView
        android:id="@+id/btn_info_back"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_arrow_back"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/img_logo_info"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_sin"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_desarrollador"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:paddingStart="20dp"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nick_desarrollador"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/desarrollador"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_app"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:paddingStart="20dp"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/tv_version_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/version_prueba"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textAlignment="center"
            android:layout_margin="8dp"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>