<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/glass_morphing_with_stroke"
    android:layout_margin="4dp"
    android:id="@+id/row_day">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="3dp">

        <TextView
            android:id="@+id/tv_dia_pronostico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dia"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="3dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/tv_summary_pronostico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/summary"
            android:textAlignment="center"
            android:textStyle="bold"
            android:padding="3dp"
            app:layout_constraintTop_toBottomOf="@id/tv_dia_pronostico"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_temp_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_summary_pronostico"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/img_icon_forecast"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@drawable/cloudy"
                android:padding="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <ImageView
                android:id="@+id/icon_min"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/temp_min"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/img_icon_forecast"
                app:layout_constraintTop_toTopOf="@id/img_icon_forecast"/>

            <TextView
                android:id="@+id/tempMin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_min"
                app:layout_constraintStart_toEndOf="@id/icon_min"
                app:layout_constraintTop_toTopOf="@id/icon_min"/>
            <TextView
                android:id="@+id/tv_temp_min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_prueba"
                app:layout_constraintTop_toBottomOf="@id/tempMin"
                app:layout_constraintBottom_toBottomOf="@id/icon_min"
                app:layout_constraintStart_toStartOf="@id/tempMin"
                app:layout_constraintEnd_toEndOf="@id/tempMin"/>

            <ImageView
                android:id="@+id/icon_max"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="8dp"
                android:src="@drawable/temp_max"
                app:layout_constraintStart_toEndOf="@id/tempMin"
                app:layout_constraintTop_toTopOf="@id/tempMin"/>

            <TextView
                android:id="@+id/tempMax"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_max"
                android:layout_marginEnd="16dp"
                app:layout_constraintStart_toEndOf="@id/icon_max"
                app:layout_constraintTop_toTopOf="@id/icon_max"
                app:layout_constraintEnd_toEndOf="parent"/>
            <TextView
                android:id="@+id/tv_temp_max"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/temp_prueba"
                app:layout_constraintTop_toBottomOf="@id/tempMax"
                app:layout_constraintStart_toStartOf="@id/tempMax"
                app:layout_constraintEnd_toEndOf="@id/tempMax"
                app:layout_constraintBottom_toBottomOf="@id/icon_max"/>

            <TextView
                android:id="@+id/tv_temp_description_forecast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description_prueba"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="@id/icon_min"
                app:layout_constraintEnd_toEndOf="@id/tempMax"
                app:layout_constraintTop_toBottomOf="@id/icon_min"
                app:layout_constraintBottom_toBottomOf="@id/img_icon_forecast"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>